--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,4 +83,44 @@ box-shadow: 2px 2px 2px #82c3a6;
   margin: 5% auto;
   box-shadow: 2px 2px 2px #02010a;
 }
+footer{
+  background-color: #C6d5c5;
+  width: 900px;
+  display: block;
+  margin: 0 auto;
+  display: flex;
+}
+ li a{
+  text-decoration: none;
+}
+ul li{
+  list-style: none;
+}
+footer h3{
+  padding: 1em 0 0 1em;
+  margin-bottom: -1em;
+}
+#contacto{
+flex: 1;
+text-align: left;
+}
+
+#terminos{
+flex: 3;
+text-align: left;
+}
+
+#redes{
+flex: 1;
+text-align: left;
+}
+
+#derechos{
+flex: 1;
+text-align: left;
+}
+ul{
+margin:0;
+padding:1em;
+list-style-type:none;
 }
