--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,6 +24,7 @@
   margin-left: 1%;
   font-family: "Dancing Script";
 
+
 }
 #cabecera nav a{
   float: right;
@@ -49,6 +50,22 @@
   display: flex;
   margin: 0 auto;
 }
+#contenedor2{
+  background-color: #d5c75f;
+  
+  display: flex;
+  margin: 0 auto;
+  flex-flow: row wrap;
+  width: 100%;
+
+
+}
+div [class *= "bloque"]{
+  width: 100%;
+  min-height:10em;
+  flex: 1 2 50%;
+}
+
 #bloque1{
   flex-grow: 1;
 }
@@ -77,12 +94,14 @@ box-shadow: 2px 2px 2px #82c3a6;
   -webkit-transform: translate(10px,10px);
 
 }
+
 #contenedor img{
   display: block;
   width: 90%;
   margin: 5% auto;
   box-shadow: 2px 2px 2px #02010a;
 }
+
 footer{
   background-color: #C6d5c5;
   width: 900px;
@@ -123,4 +142,256 @@ ul{
 margin:0;
 padding:1em;
 list-style-type:none;
+}
+}
+@media(max-width:900px){
+  #contenido{
+    display: block;
+    margin: 0 auto;
+  }
+  body{
+    background-color:#02010a;
+    font-family: "Dancing Script",cursive;
+  }
+#cabecera{
+  background-color: #5b7989;
+  border-radius: 10px 10px 0 0;
+  height: 10em;
+  font-family: "Dancing Script";
+  text-align: center;
+}
+
+#cabecera>h1{
+  color: white;
+  text-shadow: 0 0 2px #02010a;
+  font-size: 24px;
+  margin-top:5em;
+  font-family: "Dancing Script";
+
+}
+#cabecera nav a{
+  color: white;
+  font-size: 20px;
+  margin-top:6em;
+  margin-right: 1%;
+  text-decoration: none;
+}
+#imagen_central{
+  background-color: #82c3a6;
+  padding: 20px 0px;
+}
+#imagen_central img{
+  display: block;
+  margin:0 auto;
+  width: 90%;
+  box-shadow: 2px 2px 2px #02010a;
+}
+section{
+  background-color: #d5c75f;
+  border: 1px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+}
+#bloque1{
+  flex-grow: 1;
+}
+#bloque1 img{
+-webkit-transition: all 0.5s ease-out;
+ -moz-transition: all 0.5s ease;
+ -ms-transition: all 0.5s ease;
+}
+#bloque1 img:hover{
+  -webkit-transform: rotate(10deg);
+ -moz-transform: rotate(10deg);
+ -ms-transform: rotate(10deg);
+ transform: rotate(10deg);
+box-shadow: 2px 2px 2px #82c3a6;
+  border: 2px;
+}
+#bloque2{
+  flex-grow: 1;
+}
+#bloque2 img{
+-webkit-transition: all 0.5s ease-out;
+ -moz-transition: all 0.5s ease;
+ -ms-transition: all 0.5s ease;
+}
+#bloque2 img:hover{
+  -webkit-transform: translate(10px,10px);
+
+}
+#contenedor img{
+  display: block;
+  width: 90%;
+  margin: 5% auto;
+  box-shadow: 2px 2px 2px #02010a;
+}
+footer{
+  background-color: #C6d5c5;
+  display: block;
+  margin: 0 auto;
+  display: flex;
+}
+ li a{
+  text-decoration: none;
+}
+ul li{
+  list-style: none;
+}
+footer h3{
+  padding: 1em 0 0 1em;
+  margin-bottom: -1em;
+}
+#contacto{
+flex: 1;
+text-align: left;
+}
+
+#terminos{
+flex: 3;
+text-align: left;
+}
+
+#redes{
+flex: 1;
+text-align: left;
+}
+
+#derechos{
+flex: 1;
+text-align: left;
+}
+ul{
+margin:0;
+padding:1em;
+list-style-type:none;
+}
+}
+
+@media(max-width:500px){
+  #contenido{
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
+  body{
+    background-color:#02010a;
+    font-family: "Dancing Script",cursive;
+  }
+#cabecera{
+  background-color: #5b7989;
+  border-radius: 10px 10px 0 0;
+  height: 10em;
+  font-family: "Dancing Script";
+  text-align: center;
+}
+
+#cabecera>h1{
+  color: white;
+  text-shadow: 0 0 2px #02010a;
+  font-size: 24px;
+  margin-top:5em;
+  font-family: "Dancing Script";
+
+}
+#cabecera nav a{
+  color: white;
+  font-size: 20px;
+  margin-top:6em;
+  margin-right: 1%;
+  text-decoration: none;
+}
+#imagen_central{
+  background-color: #82c3a6;
+  padding: 20px 0px;
+}
+#imagen_central img{
+  display: block;
+  margin:0 auto;
+  width: 90%;
+  box-shadow: 2px 2px 2px #02010a;
+}
+section{
+  background-color: #d5c75f;
+  border: 1px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+}
+#bloque1{
+  flex-grow: 1;
+}
+#bloque1 img{
+-webkit-transition: all 0.5s ease-out;
+ -moz-transition: all 0.5s ease;
+ -ms-transition: all 0.5s ease;
+}
+#bloque1 img:hover{
+  -webkit-transform: rotate(10deg);
+ -moz-transform: rotate(10deg);
+ -ms-transform: rotate(10deg);
+ transform: rotate(10deg);
+box-shadow: 2px 2px 2px #82c3a6;
+  border: 2px;
+}
+#bloque2{
+  flex-grow: 1;
+}
+#bloque2 img{
+-webkit-transition: all 0.5s ease-out;
+ -moz-transition: all 0.5s ease;
+ -ms-transition: all 0.5s ease;
+}
+#bloque2 img:hover{
+  -webkit-transform: translate(10px,10px);
+
+}
+#contenedor img{
+  display: block;
+  width: 90%;
+  margin: 5% auto;
+  box-shadow: 2px 2px 2px #02010a;
+}
+footer{
+  background-color: #C6d5c5;
+  display: block;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+ li a{
+  text-decoration: none;
+}
+ul li{
+  list-style: none;
+}
+footer h3{
+  padding: 1em 0 0 1em;
+  margin-bottom: -1em;
+}
+#contacto{
+flex: 1;
+text-align: left;
+}
+
+#terminos{
+flex: 3;
+text-align: left;
+}
+
+#redes{
+flex: 1;
+text-align: left;
+}
+
+#derechos{
+flex: 1;
+text-align: left;
+}
+ul{
+margin:0;
+padding:1em;
+list-style-type:none;
+}
 }
