--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,22 @@
   height: 10em;
   font-family: "Dancing Script";
 }
+header {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    0%{
+        margin-top:150%
+      }
+    60%{
+        margin-top:-5%
+    }
+    100%{
+        margin-top: 0%
+    }
+}
 
 #cabecera>h1{
   color: white;
@@ -52,13 +68,10 @@
 }
 #contenedor2{
   background-color: #d5c75f;
-  
   display: flex;
   margin: 0 auto;
   flex-flow: row wrap;
   width: 100%;
-
-
 }
 div [class *= "bloque"]{
   width: 100%;
@@ -96,6 +109,12 @@ box-shadow: 2px 2px 2px #82c3a6;
 }
 
 #contenedor img{
+  display: block;
+  width: 90%;
+  margin: 5% auto;
+  box-shadow: 2px 2px 2px #02010a;
+}
+#contenedor2 img{
   display: block;
   width: 90%;
   margin: 5% auto;
@@ -144,7 +163,7 @@ padding:1em;
 list-style-type:none;
 }
 }
-@media(max-width:900px){
+@media (max-width:900px) and (min-width:500px){
   #contenido{
     display: block;
     margin: 0 auto;
@@ -160,19 +179,33 @@ list-style-type:none;
   font-family: "Dancing Script";
   text-align: center;
 }
+header {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
 
+@keyframes slidein {
+    0%{
+        margin-top:150%
+      }
+    60%{
+        margin-top:-5%
+    }
+    100%{
+        margin-top: 0%
+    }
+}
 #cabecera>h1{
   color: white;
   text-shadow: 0 0 2px #02010a;
   font-size: 24px;
-  margin-top:5em;
+  padding-top: 2em;
   font-family: "Dancing Script";
 
 }
 #cabecera nav a{
   color: white;
   font-size: 20px;
-  margin-top:6em;
   margin-right: 1%;
   text-decoration: none;
 }
@@ -222,6 +255,12 @@ box-shadow: 2px 2px 2px #82c3a6;
 
 }
 #contenedor img{
+  display: block;
+  width: 90%;
+  margin: 5% auto;
+  box-shadow: 2px 2px 2px #02010a;
+}
+#contenedor2 img{
   display: block;
   width: 90%;
   margin: 5% auto;
@@ -275,6 +314,22 @@ list-style-type:none;
     margin: 0 auto;
     width: 100%;
   }
+  header {
+      animation-duration: 3s;
+      animation-name: slidein;
+  }
+
+  @keyframes slidein {
+      0%{
+          margin-top:150%
+        }
+      60%{
+          margin-top:-5%
+      }
+      100%{
+          margin-top: 0%
+      }
+  }
   body{
     background-color:#02010a;
     font-family: "Dancing Script",cursive;
@@ -291,14 +346,13 @@ list-style-type:none;
   color: white;
   text-shadow: 0 0 2px #02010a;
   font-size: 24px;
-  margin-top:5em;
   font-family: "Dancing Script";
+  padding-top: 2em;
 
 }
 #cabecera nav a{
   color: white;
   font-size: 20px;
-  margin-top:6em;
   margin-right: 1%;
   text-decoration: none;
 }
@@ -348,6 +402,12 @@ box-shadow: 2px 2px 2px #82c3a6;
 
 }
 #contenedor img{
+  display: block;
+  width: 90%;
+  margin: 5% auto;
+  box-shadow: 2px 2px 2px #02010a;
+}
+#contenedor2 img{
   display: block;
   width: 90%;
   margin: 5% auto;
