--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,457 +1,230 @@
-@media(min-width:900px){
-  #contenido{
-    width: 900px;
-    display: block;
-    margin: 0 auto;
-  }
-  body{
-    background-color:#02010a;
-    font-family: "Dancing Script",cursive;
-  }
-#cabecera{
-  background-color: #5b7989;
-  border-radius: 10px 10px 0 0;
-  height: 10em;
-  font-family: "Dancing Script";
-}
-header {
-    animation-duration: 3s;
-    animation-name: slidein;
-}
 
-@keyframes slidein {
-    0%{
-        margin-top:150%
-      }
-    60%{
-        margin-top:-5%
-    }
-    100%{
-        margin-top: 0%
-    }
+.blur{
+	-webkit-filter: blur(10px);
 }
-
-#cabecera>h1{
-  color: white;
-  text-shadow: 0 0 2px #02010a;
-  font-size: 24px;
-  float:left;
-  margin-top:5em;
-  margin-left: 1%;
-  font-family: "Dancing Script";
-
-
+.gris{
+	-webkit-filter: grayscale(100%);
 }
-#cabecera nav a{
-  float: right;
-  color: white;
-  font-size: 20px;
-  margin-top:6em;
-  margin-right: 1%;
-  text-decoration: none;
+.sepia{
+	-webkit-filter: sepia(90%);
 }
-#imagen_central{
-  background-color: #82c3a6;
-  padding: 20px 0px;
+*{
+	font-family: "Dancing Script";
+	margin: 0;
+	padding: 0;
 }
-#imagen_central img{
-  display: block;
-  margin:0 auto;
-  width: 90%;
-  box-shadow: 2px 2px 2px #02010a;
+body{
+	background-color: #02010a;
+	display: flex;
+	justify-content: center;
 }
-#contenedor{
-  background-color: #d5c75f;
-  border: 1px;
-  display: flex;
-  margin: 0 auto;
+header{
+	background-color: #5b7989;
+	color: #FFF;
+	display: flex;
+	border-radius: 10px 10px 0 0;
 }
-#contenedor2{
-  background-color: #d5c75f;
-  display: flex;
-  margin: 0 auto;
-  flex-flow: row wrap;
-  width: 100%;
+li{
+	list-style: none;
 }
-div [class *= "bloque"]{
-  width: 100%;
-  min-height:10em;
-  flex: 1 2 50%;
+li a{
+	color: #FFF;
 }
-
-#bloque1{
-  flex-grow: 1;
-}
-#bloque1 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque1 img:hover{
-  -webkit-transform: rotate(10deg);
- -moz-transform: rotate(10deg);
- -ms-transform: rotate(10deg);
- transform: rotate(10deg);
-box-shadow: 2px 2px 2px #82c3a6;
-  border: 2px;
-}
-#bloque2{
-  flex-grow: 1;
-}
-#bloque2 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque2 img:hover{
-  -webkit-transform: translate(10px,10px);
-
-}
-
-#contenedor img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
-}
-#contenedor2 img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
-}
-
-footer{
-  background-color: #C6d5c5;
-  width: 900px;
-  display: block;
-  margin: 0 auto;
-  display: flex;
-}
- li a{
-  text-decoration: none;
-}
-ul li{
-  list-style: none;
-}
-footer h3{
-  padding: 1em 0 0 1em;
-  margin-bottom: -1em;
-}
-#contacto{
-flex: 1;
-text-align: left;
-}
-
-#terminos{
-flex: 3;
-text-align: left;
-}
-
-#redes{
-flex: 1;
-text-align: left;
-}
-
-#derechos{
-flex: 1;
-text-align: left;
+p{
+	font-weight: bold;
 }
 ul{
-margin:0;
-padding:1em;
-list-style-type:none;
+	display: flex;
 }
+img{
+	box-shadow: 2px 2px #02010a;
 }
-@media (max-width:900px) and (min-width:500px){
-  #contenido{
-    display: block;
-    margin: 0 auto;
-  }
-  body{
-    background-color:#02010a;
-    font-family: "Dancing Script",cursive;
-  }
-#cabecera{
-  background-color: #5b7989;
-  border-radius: 10px 10px 0 0;
-  height: 10em;
-  font-family: "Dancing Script";
-  text-align: center;
+.actual{
+	text-decoration: none;
 }
-header {
-    animation-duration: 3s;
-    animation-name: slidein;
-}
-
-@keyframes slidein {
-    0%{
-        margin-top:150%
-      }
-    60%{
-        margin-top:-5%
-    }
-    100%{
-        margin-top: 0%
-    }
-}
-#cabecera>h1{
-  color: white;
-  text-shadow: 0 0 2px #02010a;
-  font-size: 24px;
-  padding-top: 2em;
-  font-family: "Dancing Script";
-
-}
-#cabecera nav a{
-  color: white;
-  font-size: 20px;
-  margin-right: 1%;
-  text-decoration: none;
-}
-#imagen_central{
-  background-color: #82c3a6;
-  padding: 20px 0px;
-}
-#imagen_central img{
-  display: block;
-  margin:0 auto;
-  width: 90%;
-  box-shadow: 2px 2px 2px #02010a;
-}
-section{
-  background-color: #d5c75f;
-  border: 1px;
-  display: flex;
-  margin: 0 auto;
-  flex-direction: column;
-}
-#bloque1{
-  flex-grow: 1;
-}
-#bloque1 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque1 img:hover{
-  -webkit-transform: rotate(10deg);
- -moz-transform: rotate(10deg);
- -ms-transform: rotate(10deg);
- transform: rotate(10deg);
-box-shadow: 2px 2px 2px #82c3a6;
-  border: 2px;
-}
-#bloque2{
-  flex-grow: 1;
-}
-#bloque2 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque2 img:hover{
-  -webkit-transform: translate(10px,10px);
-
-}
-#contenedor img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
-}
-#contenedor2 img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
+header h1{
+	text-shadow: 2px 2px #02010a;
+	text-align: center;
 }
 footer{
-  background-color: #C6d5c5;
-  display: block;
-  margin: 0 auto;
-  display: flex;
+	background: #C6d5c5;
+	border-radius: 0 0 10px 10px;
 }
- li a{
-  text-decoration: none;
+#img{
+	background-color: #82c3a6;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-ul li{
-  list-style: none;
+#img img{
+	width: 90%;
+	margin: 10px 0;
 }
-footer h3{
-  padding: 1em 0 0 1em;
-  margin-bottom: -1em;
+#seg img{
+	box-shadow: #82c3a6;
+	max-width: 100%;
 }
-#contacto{
-flex: 1;
-text-align: left;
+spam a{
+	display: flex;
 }
-
-#terminos{
-flex: 3;
-text-align: left;
+#contenido{
+	animation: animationContenido 1s;
 }
-
-#redes{
-flex: 1;
-text-align: left;
+@-webkit-keyframes animationContenido{
+	0%{
+		margin-top: 150%;
+	}60%{
+		margin-top: -5%;
+	}100%{
+		margin-top: 0;
+	}
 }
-
-#derechos{
-flex: 1;
-text-align: left;
+@-webkit-keyframes animantionShadow{
+	from{
+		box-shadow: 2px 2px #02010a;
+	}to{
+		box-shadow:  2px 2px #82c3a6;
+	}
 }
-ul{
-margin:0;
-padding:1em;
-list-style-type:none;
+.rotate{
+	transform: rotateZ(none);
+	transition: rotatez, 1s;
 }
+.rotate:hover{
+	transform: rotateZ(10deg);
+	animation: animantionShadow 1s;
+	animation-fill-mode: forwards;
 }
-
-@media(max-width:500px){
-  #contenido{
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-  }
-  header {
-      animation-duration: 3s;
-      animation-name: slidein;
-  }
-
-  @keyframes slidein {
-      0%{
-          margin-top:150%
-        }
-      60%{
-          margin-top:-5%
-      }
-      100%{
-          margin-top: 0%
-      }
-  }
-  body{
-    background-color:#02010a;
-    font-family: "Dancing Script",cursive;
-  }
-#cabecera{
-  background-color: #5b7989;
-  border-radius: 10px 10px 0 0;
-  height: 10em;
-  font-family: "Dancing Script";
-  text-align: center;
+.translate{
+	transform: translate(0, 0);
+	transition: traslate, 1s;
 }
-
-#cabecera>h1{
-  color: white;
-  text-shadow: 0 0 2px #02010a;
-  font-size: 24px;
-  font-family: "Dancing Script";
-  padding-top: 2em;
-
+.translate:hover{
+	transform:  translate(20px, -5px);
+	animation: animantionShadow 1s;
+	animation-fill-mode: forwards;
 }
-#cabecera nav a{
-  color: white;
-  font-size: 20px;
-  margin-right: 1%;
-  text-decoration: none;
+spam{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-#imagen_central{
-  background-color: #82c3a6;
-  padding: 20px 0px;
+spam a{
+	margin: 10px;
+	justify-content: center;
+	align-items: center;
 }
-#imagen_central img{
-  display: block;
-  margin:0 auto;
-  width: 90%;
-  box-shadow: 2px 2px 2px #02010a;
+#galery div div img{
+	width: 100%;
 }
-section{
-  background-color: #d5c75f;
-  border: 1px;
-  display: flex;
-  margin: 0 auto;
-  flex-direction: column;
+/* ////////////////////////////////////////////////////////////////////// */
+@media screen and (min-width:900px){
+	#contenido{
+		max-width: 900px;
+	}
+	header{
+		justify-content: space-between;
+		padding: 10px;
+	}
+	div{
+		padding: 10px;
+	}
+	li{
+		margin: 0 10px;
+	}
+	footer{
+		display:flex;
+		border-radius: 0 0 10px 10px
+	}
+	footer div{
+		flex-basis: 0;
+		flex-grow: 1;
+		padding: 20px;
+	}
+	#seg img{
+		box-shadow: #82c3a6;
+		max-width: 100%;
+	}
+	nav{
+		perspective-origin: right;
+		margin: auto 0;
+	}
+	.inter{
+		flex-basis: 0;
+		flex-grow: 1;
+		margin: 0;
+	}
+	#galery{
+		display: flex;
+		flex-direction: column;
+		background-color: #d5c75f;
+	}
+	#galery div{
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			padding: 0;
+	}
+	#galery div div{
+		margin: 20px;
+	}
+	spam{
+		justify-content: center;
+	}
+	#seg{
+		display: flex;
+		justify-content: space-around;
+		background-color: #d5c75f;
+		border: solid 1px;
+	}
 }
-#bloque1{
-  flex-grow: 1;
-}
-#bloque1 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque1 img:hover{
-  -webkit-transform: rotate(10deg);
- -moz-transform: rotate(10deg);
- -ms-transform: rotate(10deg);
- transform: rotate(10deg);
-box-shadow: 2px 2px 2px #82c3a6;
-  border: 2px;
-}
-#bloque2{
-  flex-grow: 1;
-}
-#bloque2 img{
--webkit-transition: all 0.5s ease-out;
- -moz-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
-}
-#bloque2 img:hover{
-  -webkit-transform: translate(10px,10px);
-
-}
-#contenedor img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
-}
-#contenedor2 img{
-  display: block;
-  width: 90%;
-  margin: 5% auto;
-  box-shadow: 2px 2px 2px #02010a;
-}
-footer{
-  background-color: #C6d5c5;
-  display: block;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
- li a{
-  text-decoration: none;
-}
-ul li{
-  list-style: none;
-}
-footer h3{
-  padding: 1em 0 0 1em;
-  margin-bottom: -1em;
-}
-#contacto{
-flex: 1;
-text-align: left;
-}
-
-#terminos{
-flex: 3;
-text-align: left;
-}
-
-#redes{
-flex: 1;
-text-align: left;
-}
-
-#derechos{
-flex: 1;
-text-align: left;
-}
-ul{
-margin:0;
-padding:1em;
-list-style-type:none;
-}
+/* ///////////////////////////////////////////////////////////////////////// */
+ @media screen and (max-width:899px){
+	#contenido{
+		width: 100%;
+	}
+	header{
+		width: 100%;
+		flex-direction: column;
+		align-items: center;
+	}
+	li{
+		margin: 10px;
+	}
+	#img{
+		padding: 10px;
+	}
+	spam{
+		margin: 10px 10px 0 10px;
+	}
+	#seg{
+		display: flex;
+		flex-direction: column;
+		background-color: #d5c75f;
+		border: solid 1px;
+		padding-bottom: 10px;
+	}
+	header{
+		padding-top: 10px;
+	}
+	footer div{
+		margin: 10px;
+	}
+	footer{
+		display: flex;
+		flex-direction: column;
+	}
+	#galery{
+		display: flex;
+		flex-direction: column;
+		background-color: #d5c75f;
+	}
+	#galery div{
+		display: flex;
+		flex-direction: column;
+	}
+	#galery div div{
+		padding: 0px;
+		margin: 10px;
+	}
 }
